SLIM-2105 format xjb and changed model

--- a/osgp/shared/osgp-ws-smartmetering/pom.xml
+++ b/osgp/shared/osgp-ws-smartmetering/pom.xml
@@ -32,6 +32,7 @@
               <goal>xjc</goal>
             </goals>
             <configuration>
+              <extension>true</extension>
               <bindingDirectory>src/main/resources/schemas</bindingDirectory>
               <bindingFiles>sm-bundle.xjb</bindingFiles>
               <schemaDirectory>src/main/resources</schemaDirectory>
