OC-531 ~ Fixes queue property for distribution automation in osgp core

--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -126,7 +126,7 @@ jms.domain.distributionautomation.incoming.responses.queue=osgp-core.1_0.domain-
 # jms.domain.distributionautomation.outgoing.requests
 jms.domain.distributionautomation.outgoing.requests.queue=domain-distributionautomation.1_0.osgp-core.1_0.requests
 # jms.domain.distributionautomation.outgoing.responses
-jms.domain.distributionautomation.outgoing.requests.queue=domain-distributionautomation.1_0.osgp-core.1_0.responses
+jms.domain.distributionautomation.outgoing.responses.queue=domain-distributionautomation.1_0.osgp-core.1_0.responses
 
 # =========================================================
 # ===   PROTOCOL MESSAGING CONFIG                       ===
