--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -99,7 +99,7 @@ jms.domain.microgrids.outgoing.responses.queue=domain-microgrids.1_0.osgp-core.1
 jms.domain.distributionautomation.incoming.requests.queue=osgp-core.1_0.domain-distributionautomation.1_0.requests
 jms.domain.distributionautomation.incoming.responses.queue=osgp-core.1_0.domain-distributionautomation.1_0.responses
 jms.domain.distributionautomation.outgoing.requests.queue=domain-distributionautomation.1_0.osgp-core.1_0.requests
-jms.domain.distributionautomation.outgoing.requests.queue=domain-distributionautomation.1_0.osgp-core.1_0.responses
+jms.domain.distributionautomation.outgoing.responses.queue=domain-distributionautomation.1_0.osgp-core.1_0.responses
 
 
 # =========================================================
