--- a/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-simulator-iec60870/pom.xml
@@ -69,6 +69,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
