FLEX-5070 ~ Adds delay to get firmware version, processes review comments.

--- a/osgp/platform/osgp-adapter-domain-core/src/main/resources/osgp-adapter-domain-core.properties
+++ b/osgp/platform/osgp-adapter-domain-core/src/main/resources/osgp-adapter-domain-core.properties
@@ -127,3 +127,7 @@ osgp.scheduling.job.database.cleanup.device.message.csv.file.location=/tmp/csv-f
 osgp.scheduling.job.database.cleanup.device.message.csv.file.prefix=osgp-device-messages-
 # Compression using zip of output files.
 osgp.scheduling.job.database.cleanup.device.message.csv.file.compression.enabled=true
+
+
+# Delay in milliseconds used to retrieve the firmware version for SSLDs with a pending firmware update.
+ssld.pending.firmware.update.get.firmware.version.delay=5000
