OC-522 ~ Updates OSGP Logging configuration

--- a/osgp/platform/osgp-logging/src/main/resources/osgp-logging.properties
+++ b/osgp/platform/osgp-logging/src/main/resources/osgp-logging.properties
@@ -43,60 +43,28 @@ flyway.init.on.migrate=true
 #Declares the base package of the entity classes
 entitymanager.packages.to.scan=org.opensmartgridplatform.logging.domain.entities
 
-# --- JMS Settings ---
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
-
-jms.default.initial.redelivery.delay=0
-jms.default.maximum.redeliveries=3
-jms.default.maximum.redelivery.delay=60000
-jms.default.redelivery.delay=10000
-jms.default.back.off.multiplier=2
-jms.default.use.exponential.back.off=true
-
 # =========================================================
-# ===   JMS Settings: Logging Listener                  ===
+# MESSAGING CONFIG
 # =========================================================
+#----------------------------------------------------------
+# jms.default
+#----------------------------------------------------------
+#jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.logging
+#----------------------------------------------------------
 jms.logging.queue=osgp.logging.ws
 
-# --- CONCURRENT CONSUMERS ---
-jms.logging.concurrent.consumers=2
-jms.logging.max.concurrent.consumers=10
-
-# --- REDELIVERY POLICY ---
-# Set initial redelivery delay in ms (60000 = 1 min)
-jms.logging.initial.redelivery.delay=60000
-jms.logging.maximum.redeliveries=3
-# Set maximum redelivery delay in ms (300000 = 5 min)
-jms.logging.maximum.redelivery.delay=300000
-# Setredelivery delay in ms (60000 = 1 min)
-jms.logging.redelivery.delay=60000
-jms.logging.back.off.multiplier=2
-jms.logging.use.exponential.back.off=true
-
-# =========================================================
-# ===   PROTOCOL MESSAGING CONFIG                       ===
-# =========================================================
-
-# Default redelivery settings
-jms.protocol.log.item.requests.initial.redelivery.delay=0
-jms.protocol.log.item.requests.maximum.redeliveries=3
-jms.protocol.log.item.requests.maximum.redelivery.delay=60000
-jms.protocol.log.item.requests.redelivery.delay=10000
-jms.protocol.log.item.requests.back.off.multiplier=2
-jms.protocol.log.item.requests.use.exponential.back.off=true
-       
-# =========================================================
-# ===   JMS Settings: Protocol Logging Requests         ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.protocol.log.item.requests
+#----------------------------------------------------------
 jms.protocol.log.item.requests.queue=osgp.logging.protocol
 
-# JMS Settings for receiving Protocol Logging Requests
-jms.protocol.log.item.requests.concurrent.consumers=2
-jms.protocol.log.item.requests.max.concurrent.consumers=10
+jms.protocol.log.item.requests.initial.redelivery.delay=0
+jms.protocol.log.item.requests.maximum.redelivery.delay=60000
+jms.protocol.log.item.requests.redelivery.delay=10000
 
 # =========================================================
 # ===   SCHEDULING CONFIG                               ===
