--- a/osgp/platform/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
+++ b/osgp/platform/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
@@ -69,55 +69,26 @@ entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.microgrids.
 # =========================================================
 # MESSAGING CONFIG
 # =========================================================
+# ---------------------------------------------------------
+# jms.default
+# ---------------------------------------------------------
+#jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
-# --- JMS Settings ---
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
+# ---------------------------------------------------------
+# jms.microgrids.inbound.domain.responses
+# ---------------------------------------------------------
+jms.microgrids.inbound.domain.responses.queue=ws-microgrids.1_0.domain-microgrids.1_0.responses
 
-# --- DELIVERY OPTIONS ---
-jms.default.explicit.qos.enabled=true
-jms.default.delivery.persistent=true
-jms.default.time.to.live=0
+# ---------------------------------------------------------
+# jms.microgrids.outbound.domain.requests
+# ---------------------------------------------------------
+jms.microgrids.outbound.domain.requests.queue=domain-microgrids.1_0.ws-microgrids.1_0.requests
 
-jms.default.initial.redelivery.delay=60000
-jms.default.maximum.redeliveries=3
-jms.default.maximum.redelivery.delay=300000
-jms.default.redelivery.delay=60000
-jms.default.back.off.multiplier=2
-jms.default.use.exponential.back.off=true
-
-# =========================================================
-# JMS Settings: Microgrids Requests
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
-jms.microgrids.requests.queue=domain-microgrids.1_0.ws-microgrids.1_0.requests
-
-# --- DELIVERY OPTIONS ---
-jms.microgrids.requests.time.to.live=3600000 
-
-# --- CONCURRENT CONSUMERS ---
-jms.microgrids.requests.concurrent.consumers=2
-jms.microgrids.requests.max.concurrent.consumers=10
-
-# =========================================================
-# JMS Settings: Microgrids Responses
-# =========================================================
-# --- DEFAULT DESTINATION ---
-jms.microgrids.responses.queue=ws-microgrids.1_0.domain-microgrids.1_0.responses
-
-# --- CONCURRENT CONSUMERS ---
-jms.microgrids.responses.concurrent.consumers=2
-jms.microgrids.responses.max.concurrent.consumers=10
-
-# =========================================================
-# JMS Settings: Common Logging
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
-jms.microgrids.logging.queue=osgp.logging.ws
-
-# --- DELIVERY OPTIONS ---
-jms.microgrids.logging.time.to.live=3600000
+# ---------------------------------------------------------
+# jms.microgrids.outbound.logging.requests
+# ---------------------------------------------------------
+jms.microgrids.outbound.logging.requests.queue=osgp.logging.ws
 
 
 # =========================================================
