--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
@@ -1,8 +1,20 @@
 rtu.port=60102
-rtu.icd=Pampus.icd
+rtu.icd=Transformer.icd
+rtu.serverName=Transformer
 
-rtu.serverName=WAGO61850Server
+rtu.transformer.simulation.enabled=true
+rtu.transformer.simulation.file.power=transformer-p.csv
+rtu.transformer.simulation.file.temperature=t-transformer-t.csv
+
+#rtu.port=60122
+#rtu.icd=Pampus.icd
+#rtu.icd=Device.icd
+
+#rtu.serverName=WAGO61850Server
+#rtu.serverName=Bachmann61850Server
+
 rtu.stopGeneratingValues=false
+
 rtu.updateValuesDelay=2000
 rtu.updateValuesPeriod=10000
 rtu.enableUpdatePqValuesEventListener=false
