OC-395: Adds checkstyle version to resolve problems with building cucumber components.

--- a/super/pom.xml
+++ b/super/pom.xml
@@ -105,6 +105,7 @@
     <protobuf.version>2.4.1</protobuf.version>
     <guava.version>18.0</guava.version>
     <pmd.version>4.3</pmd.version>
+    <checkstyle.version>2.12.1</checkstyle.version>
     <jacoco.version>0.7.9</jacoco.version>
     <selenium.java.version>3.11.0</selenium.java.version>
     <SunriseSunsetCalculator.version>1.1</SunriseSunsetCalculator.version>
