OC-395: Introduces a 'super' pom (#141)
* OC-395: Introduces a 'super' pom; rewrites some tests to resolve a
version conflict.

* OC-395: Removes unused sections; updates selenium version to synchronize
with the apps.

* OC-395: Adds checkstyle version to resolve problems with building
cucumber components.

* OC-395: Updates guava version to prevent compilation errors on the
cucumber tests for the apps.

* OC-395 ~ Fixes startup problem of osgp-protocol-adapter-iec60870.

* OC-395 ~ Adds super pom.xml as module for client applications.

* OC-395 ~ Resolves several Maven warnings regarding versions.

--- a/osgp/protocol-adapter-dlms/osgp-jasper-interface/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-jasper-interface/pom.xml
@@ -121,7 +121,6 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.3.6</version>
     </dependency>
     <dependency>
       <groupId>xmlunit</groupId>
@@ -191,6 +190,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
     </dependency>
 
   </dependencies>
