--- a/osgp/protocol-adapter-iec60870/parent-pa-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/parent-pa-iec60870/pom.xml
@@ -53,9 +53,10 @@
     <spring.data.key.version>2.1.5.RELEASE</spring.data.key.version>
     <servlet.version>4.0.1</servlet.version>
     <hibernate.version>5.4.1.Final</hibernate.version>
-    <junit.version>4.12</junit.version>
-    <assertj.version>3.12.2</assertj.version>
-    <mockito.version>2.25.1</mockito.version>
+    <junit.version>5.6.0-M1</junit.version>
+    <assertj.version>3.14.0</assertj.version>
+    <mockito.version>3.2.4</mockito.version>
+    <byte.buddy.version>1.10.5</byte.buddy.version>
     <flyway.version>5.0.3</flyway.version>
     <slf4j.version>1.7.26</slf4j.version>
     <apache.commons.lang.version>3.8.1</apache.commons.lang.version>
@@ -201,7 +202,6 @@
         <version>${hibernate.version}</version>
       </dependency>
 
-
       <!-- Flyway (DB Migration) -->
       <dependency>
         <groupId>org.flywaydb</groupId>
@@ -298,10 +298,15 @@
       </dependency>
       <!-- Testing dependencies -->
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
         <version>${junit.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${junit.version}</version>
       </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
@@ -309,11 +314,22 @@
         <version>${assertj.version}</version>
         <scope>test</scope>
       </dependency>
+
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <version>${mockito.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <version>${mockito.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy</artifactId>
+        <version>${byte.buddy.version}</version>
       </dependency>
 
       <dependency>
