--- a/osgp/shared/osgp-ws-core/pom.xml
+++ b/osgp/shared/osgp-ws-core/pom.xml
@@ -7,7 +7,9 @@
         http://www.apache.org/licenses/LICENSE-2.0
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -24,108 +26,19 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>1.5</version>
+        <version>2.4</version>
         <executions>
           <execution>
-            <id>generic-device-installation</id>
             <goals>
               <goal>xjc</goal>
             </goals>
             <configuration>
-              <bindingDirectory>src/main/resources/schemas</bindingDirectory>
-              <bindingFiles>deviceinstallation.xjb</bindingFiles>
-              <schemaDirectory>src/main/resources</schemaDirectory>
-              <schemaFiles>DeviceInstallation.wsdl</schemaFiles>
-              <wsdl>true</wsdl>
-              <xmlschema>false</xmlschema>
-              <staleFile>${project.build.directory}/jaxb2/.schema-device-installation-stale-flag</staleFile>
-              <!-- USE THIS ONLY FOR THE FIRST EXECUTION -->
-              <clearOutputDir>false</clearOutputDir>
-            </configuration>
-          </execution>
-          <execution>
-            <id>ad-hoc-management</id>
-            <goals>
-              <goal>xjc</goal>
-            </goals>
-            <configuration>
-              <bindingDirectory>src/main/resources/schemas</bindingDirectory>
-              <bindingFiles>adhocmanagement.xjb</bindingFiles>
-              <schemaDirectory>src/main/resources</schemaDirectory>
-              <schemaFiles>AdHocManagement.wsdl</schemaFiles>
-              <wsdl>true</wsdl>
-              <xmlschema>false</xmlschema>
-              <staleFile>${project.build.directory}/jaxb2/.schema-ad-hoc-management-stale-flag</staleFile>
-              <!-- USE THIS FOR ALL EXECUTIONS EXCEPT THE FIRST -->
-              <clearOutputDir>false</clearOutputDir>
-            </configuration>
-          </execution>
-          <execution>
-            <id>device-management</id>
-            <goals>
-              <goal>xjc</goal>
-            </goals>
-            <configuration>
-              <bindingDirectory>src/main/resources/schemas</bindingDirectory>
-              <bindingFiles>devicemanagement.xjb</bindingFiles>
-              <schemaDirectory>src/main/resources</schemaDirectory>
-              <schemaFiles>DeviceManagement.wsdl</schemaFiles>
-              <wsdl>true</wsdl>
-              <xmlschema>false</xmlschema>
-              <staleFile>${project.build.directory}/jaxb2/.schema-device-management-stale-flag</staleFile>
-              <!-- USE THIS FOR ALL EXECUTIONS EXCEPT THE FIRST -->
-              <clearOutputDir>false</clearOutputDir>
-            </configuration>
-          </execution>
-          <execution>
-            <id>firmware-management</id>
-            <goals>
-              <goal>xjc</goal>
-            </goals>
-            <configuration>
-              <bindingDirectory>src/main/resources/schemas</bindingDirectory>
-              <bindingFiles>firmwaremanagement.xjb</bindingFiles>
-              <schemaDirectory>src/main/resources</schemaDirectory>
-              <schemaFiles>FirmwareManagement.wsdl</schemaFiles>
-              <wsdl>true</wsdl>
-              <xmlschema>false</xmlschema>
-              <staleFile>${project.build.directory}/jaxb2/.schema-firmware-management-stale-flag</staleFile>
-              <!-- USE THIS FOR ALL EXECUTIONS EXCEPT THE FIRST -->
-              <clearOutputDir>false</clearOutputDir>
-            </configuration>
-          </execution>
-          <execution>
-            <id>configuration-management</id>
-            <goals>
-              <goal>xjc</goal>
-            </goals>
-            <configuration>
-              <bindingDirectory>src/main/resources/schemas</bindingDirectory>
-              <bindingFiles>configurationmanagement.xjb</bindingFiles>
-              <schemaDirectory>src/main/resources</schemaDirectory>
-              <schemaFiles>ConfigurationManagement.wsdl</schemaFiles>
-              <wsdl>true</wsdl>
-              <xmlschema>false</xmlschema>
-              <staleFile>${project.build.directory}/jaxb2/.schema-configuration-management-stale-flag</staleFile>
-              <!-- USE THIS FOR ALL EXECUTIONS EXCEPT THE FIRST -->
-              <clearOutputDir>false</clearOutputDir>
-            </configuration>
-          </execution>
-          <execution>
-            <id>notification</id>
-            <goals>
-              <goal>xjc</goal>
-            </goals>
-            <configuration>
-              <bindingDirectory>src/main/resources/schemas</bindingDirectory>
-              <bindingFiles>notification.xjb</bindingFiles>
-              <schemaDirectory>src/main/resources</schemaDirectory>
-              <schemaFiles>Notification.wsdl</schemaFiles>
-              <wsdl>true</wsdl>
-              <xmlschema>false</xmlschema>
-              <staleFile>${project.build.directory}/jaxb2/.schema-notification-stale-flag</staleFile>
-              <!-- USE THIS ONLY FOR THE FIRST EXECUTION -->
-              <clearOutputDir>false</clearOutputDir>
+              <sources>
+                <source>src/main/resources/schemas</source>
+              </sources>
+              <xjbSources>
+                <xjbSource>src/main/resources/bindings</xjbSource>
+              </xjbSources>
             </configuration>
           </execution>
         </executions>
