--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/pom.xml
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/pom.xml
@@ -190,7 +190,7 @@
     <!-- Netty -->
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty</artifactId>
+      <artifactId>netty-all</artifactId>
     </dependency>
 
     <!-- Apache ActiveMQ -->
