--- a/osgp/protocol-adapter-oslp/web-device-simulator/pom.xml
+++ b/osgp/protocol-adapter-oslp/web-device-simulator/pom.xml
@@ -164,7 +164,7 @@
     <!-- Netty -->
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty</artifactId>
+      <artifactId>netty-all</artifactId>
     </dependency>
 
     <!-- OSGP -->
