--- a/osgp/platform/osgp-adapter-ws-publiclighting/pom.xml
+++ b/osgp/platform/osgp-adapter-ws-publiclighting/pom.xml
@@ -212,9 +212,9 @@
 
     <!-- Testing dependencies -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
