--- a/osgp/protocol-adapter-iec61850/parent-pa-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/parent-pa-iec61850/pom.xml
@@ -13,24 +13,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>parent-pa-iec61850</artifactId>
-  <groupId>org.opensmartgridplatform</groupId>
-  <version>5.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>parent-pa-iec61850</name>
   <!-- Description, Organization, Licenses, URL and Distribution Management elements are needed for the maven-jxr-plugin to generate a maven site -->
   <description>Parent module.</description>
-  <organization>
-    <name>OSGP</name>
-    <url>https://osgplatform.wordpress.com</url>
-  </organization>
-  <licenses>
-    <license>
-      <name>APACHE 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-    </license>
-  </licenses>
-  <!-- URL is passed in as a maven argument: -Dmaven.site.url=http://my/url/for/the/site -->
-  <url>${maven.site.url}</url>
+  <parent>
+    <groupId>org.opensmartgridplatform</groupId>
+    <artifactId>super-osgp</artifactId>
+    <version>5.0.0-SNAPSHOT</version>
+    <relativePath>../../../super/pom.xml</relativePath>
+  </parent>
   <distributionManagement>
     <site>
       <id>pa-iec61850</id>
@@ -39,402 +31,6 @@
       <url>${maven.site.distributionManagement.site.url}</url>
     </site>
   </distributionManagement>
-
-  <properties>
-    <module.baseUri>${project.baseUri}/../</module.baseUri>
-    <osgp.version>${project.version}</osgp.version>
-    <osgp.shared.version>5.0.0-SNAPSHOT</osgp.shared.version>
-    <java.version>1.8</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring.version>5.1.5.RELEASE</spring.version>
-    <spring.ws.version>3.0.7.RELEASE</spring.ws.version>
-    <spring.data.version>2.1.5.RELEASE</spring.data.version>
-    <spring.data.key.version>2.1.5.RELEASE</spring.data.key.version>
-    <spring.security.version>5.1.4.RELEASE</spring.security.version>
-    <servlet.version>4.0.1</servlet.version>
-    <servlet.jstl.version>1.2</servlet.jstl.version>
-    <hibernate.version>5.4.1.Final</hibernate.version>
-    <hibernate.validator.version>6.0.15.Final</hibernate.validator.version>
-    <junit.version>5.6.0-M1</junit.version>
-    <assertj.version>3.14.0</assertj.version>
-    <joda.version>2.10.1</joda.version>
-    <flyway.version>5.0.3</flyway.version>
-    <slf4j.version>1.7.26</slf4j.version>
-    <apache.commons.lang.version>3.8.1</apache.commons.lang.version>
-    <apache.httpcomponents.version>4.5.7</apache.httpcomponents.version>
-    <commons.codec.version>1.12</commons.codec.version>
-    <orika.version>1.5.4</orika.version>
-    <netty.version>3.10.6.Final</netty.version>
-    <jxr.version>3.0.0</jxr.version>
-    <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
-    <maven.site.plugin>3.7.1</maven.site.plugin>
-    <pmd.version>4.3</pmd.version>
-    <apache.activemq.version>5.15.9</apache.activemq.version>
-    <commons.pool.version>2.6.1</commons.pool.version>
-    <logback.version>1.2.3</logback.version>
-    <logback.ext.version>0.1.5</logback.ext.version>
-    <SunriseSunsetCalculator.version>1.2</SunriseSunsetCalculator.version>
-    <apache.commons.schema>2.2.4</apache.commons.schema>
-    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
-    <maven.war.plugin.version>3.2.2</maven.war.plugin.version>
-    <guava.version>27.1-jre</guava.version>
-    <license.maven.plugin>3.0</license.maven.plugin>
-    <hikaricp.version>3.3.1</hikaricp.version>
-    <openmuc.openiec61850.version>1.6.0</openmuc.openiec61850.version>
-  </properties>
-
-  <repositories>
-    <repository>
-      <id>fuse-repo</id>
-      <name>Fuse Source</name>
-      <url>http://repo.fusesource.com/nexus/content/groups/public/</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>maven-repo1</id>
-      <name>Maven Repository</name>
-      <url>https://repo1.maven.org/maven2/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <dependencyManagement>
-    <dependencies>
-      <!-- OSGP -->
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>osgp-dto</artifactId>
-        <version>${osgp.shared.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>shared</artifactId>
-        <version>${osgp.shared.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>osgp-iec61850</artifactId>
-        <version>${osgp.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>osgp-core-db-api-iec61850</artifactId>
-        <version>${osgp.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>osgp-domain-microgrids</artifactId>
-        <version>${osgp.shared.version}</version>
-      </dependency>
-
-      <!-- Guava for Joiner class -->
-      <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>${guava.version}</version>
-      </dependency>
-
-      <!-- Spring Framework -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-beans</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context-support</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-jdbc</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-orm</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-tx</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-webmvc</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <!-- Spring WS -->
-      <dependency>
-        <groupId>org.springframework.ws</groupId>
-        <artifactId>spring-ws-core</artifactId>
-        <version>${spring.ws.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.ws</groupId>
-        <artifactId>spring-ws-security</artifactId>
-        <version>${spring.ws.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.ws</groupId>
-        <artifactId>spring-ws-support</artifactId>
-        <version>${spring.ws.version}</version>
-      </dependency>
-
-      <!-- Spring JMS -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-jms</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-
-      <!-- Spring Data -->
-      <dependency>
-        <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-jpa</artifactId>
-        <version>${spring.data.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-keyvalue</artifactId>
-        <version>${spring.data.key.version}</version>
-      </dependency>
-
-      <!-- Servlet API 3.0 -->
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>${servlet.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>jstl</artifactId>
-        <version>${servlet.jstl.version}</version>
-      </dependency>
-
-      <!-- Joda Time (Date/Time functions) -->
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>${joda.version}</version>
-      </dependency>
-
-      <!-- Hikari connection pooling -->
-      <dependency>
-        <groupId>com.zaxxer</groupId>
-        <artifactId>HikariCP</artifactId>
-        <version>${hikaricp.version}</version>
-      </dependency>
-
-      <!-- Hibernate -->
-      <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-core</artifactId>
-        <version>${hibernate.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <version>${hibernate.version}</version>
-      </dependency>
-
-      <!-- Hibernate validator -->
-      <dependency>
-        <groupId>org.hibernate.validator</groupId>
-        <artifactId>hibernate-validator</artifactId>
-        <version>${hibernate.validator.version}</version>
-      </dependency>
-
-      <!-- Flyway (DB Migration) -->
-      <dependency>
-        <groupId>org.flywaydb</groupId>
-        <artifactId>flyway-core</artifactId>
-        <version>${flyway.version}</version>
-      </dependency>
-
-      <!-- Jakarta commons codec -->
-      <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>${commons.codec.version}</version>
-      </dependency>
-
-      <!-- Apache HTTP client -->
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>${apache.httpcomponents.version}</version>
-      </dependency>
-
-      <!-- Apache MQ client -->
-      <dependency>
-        <groupId>org.apache.activemq</groupId>
-        <artifactId>activemq-client</artifactId>
-        <version>${apache.activemq.version}</version>
-        <!-- Exclude the non-client JAR files -->
-        <exclusions>
-          <exclusion>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activeio-core</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>kahadb</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.jasypt</groupId>
-            <artifactId>jasypt</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.activemq.protobuf</groupId>
-            <artifactId>activemq-protobuf</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>commons-net</groupId>
-            <artifactId>commons-net</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.fusesource.mqtt-client</groupId>
-            <artifactId>mqtt-client</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.fusesource.fuse-extra</groupId>
-            <artifactId>fusemq-leveldb</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.activemq</groupId>
-        <artifactId>activemq-spring</artifactId>
-        <version>${apache.activemq.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.activemq</groupId>
-        <artifactId>activemq-pool</artifactId>
-        <version>${apache.activemq.version}</version>
-      </dependency>
-
-      <!-- OpenIEC61850 -->
-      <dependency>
-        <groupId>org.openmuc</groupId>
-        <artifactId>openiec61850</artifactId>
-        <version>${openmuc.openiec61850.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-pool2</artifactId>
-        <version>${commons.pool.version}</version>
-      </dependency>
-
-      <!-- Orika (mapping framework) -->
-      <dependency>
-        <groupId>ma.glasnost.orika</groupId>
-        <artifactId>orika-core</artifactId>
-        <version>${orika.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>io.netty</groupId>
-        <artifactId>netty</artifactId>
-        <version>${netty.version}</version>
-        <scope>compile</scope>
-      </dependency>
-
-      <!-- Testing dependencies -->
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>${junit.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.assertj</groupId>
-        <artifactId>assertj-core</artifactId>
-        <version>${assertj.version}</version>
-        <scope>test</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-lang3</artifactId>
-        <version>${apache.commons.lang.version}</version>
-      </dependency>
-
-      <!-- Logging dependencies -->
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>${logback.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.logback-extensions</groupId>
-        <artifactId>logback-ext-spring</artifactId>
-        <version>${logback.ext.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.mycila</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <version>${license.maven.plugin}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <build>
     <pluginManagement>
