--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,9 @@
   </build>
 
   <modules>
+    <!-- super pom -->
+    <module>super/pom.xml</module>
+
     <!-- shared -->
     <module>osgp/shared/parent-shared</module>
     <module>osgp/shared/shared</module>
@@ -167,6 +170,7 @@
     <module>integration-tests/cucumber-tests-platform-publiclighting</module>
     <module>integration-tests/cucumber-tests-platform-smartmetering</module>
 
+    <!-- demo client application -->
     <module>public-lighting-demo-app/parent-os-webapps</module>
     <module>public-lighting-demo-app/web-demo-app</module>
   </modules>
