OC-535 ~ Updates Netty in protocol adapter IEC61850
Moves DisposableNioEventLoopGroup to shared

--- a/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/pom.xml
+++ b/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/pom.xml
@@ -196,7 +196,7 @@
     <!-- Netty -->
     <dependency>
       <groupId>io.netty</groupId>
-      <artifactId>netty</artifactId>
+      <artifactId>netty-all</artifactId>
     </dependency>
 
     <!-- Apache ActiveMQ -->
