--- a/osgp/shared/parent-shared/pom.xml
+++ b/osgp/shared/parent-shared/pom.xml
@@ -8,7 +8,9 @@
         http://www.apache.org/licenses/LICENSE-2.0
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -87,6 +89,7 @@
     <hikaricp.version>3.3.1</hikaricp.version>
     <micrometer.version>1.1.3</micrometer.version>
     <byte.buddy.version>1.10.5</byte.buddy.version>
+    <netty.version>4.1.44.Final</netty.version>
   </properties>
 
   <repositories>
@@ -454,6 +457,14 @@
         <groupId>io.micrometer</groupId>
         <artifactId>micrometer-registry-prometheus</artifactId>
         <version>${micrometer.version}</version>
+      </dependency>
+
+      <!-- Netty -->
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>${netty.version}</version>
+        <scope>compile</scope>
       </dependency>
 
     </dependencies>
